--- a/eshopApi.yml
+++ b/eshopApi.yml
@@ -4,12 +4,9 @@ info:
   title: Eshop API
   description: API pro správu eshopu s podporou OIDC
   version: 1.1.0
-
 servers:
   - url: https://eshop.example.com/v1
-
 components:
-
   securitySchemes:
     OIDC:
       type: oauth2
@@ -37,7 +34,7 @@ components:
       description: "Korelaci žádosti pro sledování toku dat."
       schema:
         type: string
-  
+
     ClientIPHeader:
       name: X-Client-IP
       in: header
@@ -55,10 +52,10 @@ paths:
       security:
         - OIDC: [openid, profile, products.read]
       parameters:
-        - $ref: '#components/parameters/TraceStateHeader'
-        - $ref: '#components/parameters/ClientIPHeader'
+        - $ref: "#components/parameters/TraceStateHeader"
+        - $ref: "#components/parameters/ClientIPHeader"
       responses:
-        '200':
+        "200":
           description: Úspěšná odpověď se seznamem produktů
           content:
             application/json:
@@ -77,7 +74,7 @@ paths:
                       type: number
                       format: float
                       example: 19.99
-        '401':
+        "401":
           description: Neautorizovaný přístup
           content:
             application/json:
@@ -87,7 +84,7 @@ paths:
                   error:
                     type: string
                     example: "Neplatný token."
-        '403':
+        "403":
           description: Nedostatečné oprávnění
           content:
             application/json:
@@ -104,8 +101,8 @@ paths:
       security:
         - OIDC: [openid, profile, products.create]
       parameters:
-        - $ref: '#components/parameters/TraceStateHeader'
-        - $ref: '#components/parameters/ClientIPHeader'
+        - $ref: "#components/parameters/TraceStateHeader"
+        - $ref: "#components/parameters/ClientIPHeader"
       requestBody:
         required: true
         content:
@@ -121,9 +118,9 @@ paths:
                   format: float
                   example: 29.99
       responses:
-        '201':
+        "201":
           description: Produkt byl úspěšně přidán
-        '400':
+        "400":
           description: Chybný požadavek
           content:
             application/json:
@@ -146,12 +143,12 @@ paths:
           schema:
             type: integer
             example: 1
-        - $ref: '#components/parameters/TraceStateHeader'
-        - $ref: '#components/parameters/ClientIPHeader'
+        - $ref: "#components/parameters/TraceStateHeader"
+        - $ref: "#components/parameters/ClientIPHeader"
       security:
         - OIDC: [openid, profile, products.read]
       responses:
-        '200':
+        "200":
           description: Úspěšná odpověď s detaily produktu
           content:
             application/json:
@@ -168,7 +165,7 @@ paths:
                     type: number
                     format: float
                     example: 19.99
-        '404':
+        "404":
           description: Produkt nenalezen
           content:
             application/json:
@@ -190,8 +187,8 @@ paths:
           schema:
             type: integer
             example: 1
-        - $ref: '#components/parameters/TraceStateHeader'
-        - $ref: '#components/parameters/ClientIPHeader'
+        - $ref: "#components/parameters/TraceStateHeader"
+        - $ref: "#components/parameters/ClientIPHeader"
       security:
         - OIDC: [openid, profile, products.update]
       requestBody:
@@ -209,9 +206,9 @@ paths:
                   format: float
                   example: 25.99
       responses:
-        '200':
+        "200":
           description: Produkt byl úspěšně aktualizován
-        '404':
+        "404":
           description: Produkt nenalezen
           content:
             application/json:
@@ -233,14 +230,14 @@ paths:
           schema:
             type: integer
             example: 1
-        - $ref: '#components/parameters/TraceStateHeader'
-        - $ref: '#components/parameters/ClientIPHeader'
+        - $ref: "#components/parameters/TraceStateHeader"
+        - $ref: "#components/parameters/ClientIPHeader"
       security:
         - OIDC: [openid, profile, products.delete]
       responses:
-        '204':
+        "204":
           description: Produkt byl úspěšně smazán
-        '404':
+        "404":
           description: Produkt nenalezen
           content:
             application/json:
@@ -258,10 +255,10 @@ paths:
       security:
         - OIDC: [openid, profile, categories.read]
       parameters:
-        - $ref: '#components/parameters/TraceStateHeader'
-        - $ref: '#components/parameters/ClientIPHeader'
+        - $ref: "#components/parameters/TraceStateHeader"
+        - $ref: "#components/parameters/ClientIPHeader"
       responses:
-        '200':
+        "200":
           description: Úspěšná odpověď se seznamem kategorií
           content:
             application/json:
@@ -276,7 +273,7 @@ paths:
                     name:
                       type: string
                       example: "Kategorie A"
-        '401':
+        "401":
           description: Neautorizovaný přístup
           content:
             application/json:
@@ -293,8 +290,8 @@ paths:
       security:
         - OIDC: [openid, profile, categories.create]
       parameters:
-        - $ref: '#components/parameters/TraceStateHeader'
-        - $ref: '#components/parameters/ClientIPHeader'
+        - $ref: "#components/parameters/TraceStateHeader"
+        - $ref: "#components/parameters/ClientIPHeader"
       requestBody:
         required: true
         content:
@@ -306,9 +303,9 @@ paths:
                   type: string
                   example: "Nová Kategorie"
       responses:
-        '201':
+        "201":
           description: Kategorie byla úspěšně přidána
-        '400':
+        "400":
           description: Chybný požadavek
           content:
             application/json:
@@ -326,10 +323,10 @@ paths:
       security:
         - OIDC: [openid, profile, orders.read]
       parameters:
-        - $ref: '#components/parameters/TraceStateHeader'
-        - $ref: '#components/parameters/ClientIPHeader'
+        - $ref: "#components/parameters/TraceStateHeader"
+        - $ref: "#components/parameters/ClientIPHeader"
       responses:
-        '200':
+        "200":
           description: Úspěšná odpověď se seznamem objednávek
           content:
             application/json:
@@ -348,7 +345,7 @@ paths:
                     status:
                       type: string
                       example: "Zpracováno"
-        '401':
+        "401":
           description: Neautorizovaný přístup
           content:
             application/json:
@@ -365,8 +362,8 @@ paths:
       security:
         - OIDC: [openid, profile, orders.create]
       parameters:
-        - $ref: '#components/parameters/TraceStateHeader'
-        - $ref: '#components/parameters/ClientIPHeader'
+        - $ref: "#components/parameters/TraceStateHeader"
+        - $ref: "#components/parameters/ClientIPHeader"
       requestBody:
         required: true
         content:
@@ -385,9 +382,9 @@ paths:
                     type: integer
                     example: 2
       responses:
-        '201':
+        "201":
           description: Objednávka byla úspěšně vytvořena
-        '400':
+        "400":
           description: Chybný požadavek
           content:
             application/json:
@@ -397,7 +394,7 @@ paths:
                   error:
                     type: string
                     example: "Chybí povinné pole 'productIds'."
-        '404':
+        "404":
           description: Produkt nenalezen
           content:
             application/json:
@@ -409,78 +406,78 @@ paths:
                     example: "Jeden nebo více produktů nebyly nalezeny."
 
   /orders/{id}:
-      get:
-        summary: Získat detail objednávky podle ID
-        operationId: getOrderById
-        parameters:
-          - name: id
-            in: path
-            required: true
-            description: ID objednávky, kterou chcete získat.
-            schema:
-              type: integer
-              example: 1
-          - $ref: '#components/parameters/TraceStateHeader'
-          - $ref: '#components/parameters/ClientIPHeader'
-        security:
-          - OIDC: [openid, profile, orders.read]
-        responses:
-          '200':
-            description: Úspěšná odpověď s detaily objednávky
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                      example: 1
-                    totalPrice:
-                      type: number
-                      format: float
-                      example: 199.99
-                    status:
-                      type: string
-                      example: "Zpracováno"
-          '404':
-            description: Objednávka nenalezena
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    error:
-                      type: string
-                      example: "Objednávka s ID 1 nebyla nalezena."
+    get:
+      summary: Získat detail objednávky podle ID
+      operationId: getOrderById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID objednávky, kterou chcete získat.
+          schema:
+            type: integer
+            example: 1
+        - $ref: "#components/parameters/TraceStateHeader"
+        - $ref: "#components/parameters/ClientIPHeader"
+      security:
+        - OIDC: [openid, profile, orders.read]
+      responses:
+        "200":
+          description: Úspěšná odpověď s detaily objednávky
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 1
+                  totalPrice:
+                    type: number
+                    format: float
+                    example: 199.99
+                  status:
+                    type: string
+                    example: "Zpracováno"
+        "404":
+          description: Objednávka nenalezena
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Objednávka s ID 1 nebyla nalezena."
 
-      delete:
-        summary: Smazat objednávku podle ID
-        operationId: deleteOrder
-        parameters:
-          - name: id
-            in: path
-            required: true
-            description: ID objednávky, kterou chcete smazat.
-            schema:
-              type: integer
-              example: 1
-          - $ref: '#components/parameters/TraceStateHeader'
-          - $ref: '#components/parameters/ClientIPHeader'
-        security:
-          - OIDC: [openid, profile, orders.delete]
-        responses:
-          '204':
-            description: Objednávka byla úspěšně smazána
-          '404':
-            description: Objednávka nenalezena
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    error:
-                      type: string
-                      example: "Objednávka s ID 1 nebyla nalezena."
+    delete:
+      summary: Smazat objednávku podle ID
+      operationId: deleteOrder
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID objednávky, kterou chcete smazat.
+          schema:
+            type: integer
+            example: 1
+        - $ref: "#components/parameters/TraceStateHeader"
+        - $ref: "#components/parameters/ClientIPHeader"
+      security:
+        - OIDC: [openid, profile, orders.delete]
+      responses:
+        "204":
+          description: Objednávka byla úspěšně smazána
+        "404":
+          description: Objednávka nenalezena
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Objednávka s ID 1 nebyla nalezena."
 
 security:
   - OIDC: []
