--- a/eshopApi.yml
+++ b/eshopApi.yml
@@ -3,7 +3,7 @@ openapi: 3.0.0
 info:
   title: Eshop API
   description: API pro správu eshopu s podporou OIDC
-  version: 1.1.0
+  version: 1.1.1
 servers:
   - url: https://eshop.example.com/v1
 components:
@@ -26,6 +26,7 @@ components:
             categories.create: Přidání nové kategorie
             orders.read: Vytvoření nové objednávky
             orders.create: Čtení seznamu objednávek
+            orders.update: Aktualizace objednávky
   parameters:
     TraceStateHeader:
       name: tracestate
