--- a/eshopApi.yml
+++ b/eshopApi.yml
@@ -4,8 +4,10 @@ info:
   title: Eshop API
   description: API pro správu eshopu s podporou OIDC
   version: 1.1.1
+
 servers:
   - url: https://eshop.example.com/v1
+
 components:
   securitySchemes:
     OIDC:
@@ -24,9 +26,11 @@ components:
             products.update: Smazání produktu
             categories.read: Čtení seznamu kategorií
             categories.create: Přidání nové kategorie
-            orders.read: Vytvoření nové objednávky
-            orders.create: Čtení seznamu objednávek
+            orders.read: Čtení seznamu objednávek
+            orders.create: Vytvoření nové objednávky
             orders.update: Aktualizace objednávky
+            payments.create: Vytvoření platby
+
   parameters:
     TraceStateHeader:
       name: tracestate
@@ -75,26 +79,6 @@ paths:
                       type: number
                       format: float
                       example: 19.99
-        "401":
-          description: Neautorizovaný přístup
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: "Neplatný token."
-        "403":
-          description: Nedostatečné oprávnění
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: "Nemáte oprávnění k zobrazení produktů."
 
     post:
       summary: Přidat nový produkt
@@ -121,191 +105,6 @@ paths:
       responses:
         "201":
           description: Produkt byl úspěšně přidán
-        "400":
-          description: Chybný požadavek
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: "Chybí povinné pole 'name'."
-
-  /products/{id}:
-    get:
-      summary: Získat detail produktu podle ID
-      operationId: getProductById
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: ID produktu, který chcete získat.
-          schema:
-            type: integer
-            example: 1
-        - $ref: "#components/parameters/TraceStateHeader"
-        - $ref: "#components/parameters/ClientIPHeader"
-      security:
-        - OIDC: [openid, profile, products.read]
-      responses:
-        "200":
-          description: Úspěšná odpověď s detaily produktu
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  id:
-                    type: integer
-                    example: 1
-                  name:
-                    type: string
-                    example: "Produkt A"
-                  price:
-                    type: number
-                    format: float
-                    example: 19.99
-        "404":
-          description: Produkt nenalezen
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: "Produkt s ID 1 nebyl nalezen."
-
-    put:
-      summary: Aktualizovat produkt podle ID
-      operationId: updateProduct
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: ID produktu, který chcete aktualizovat.
-          schema:
-            type: integer
-            example: 1
-        - $ref: "#components/parameters/TraceStateHeader"
-        - $ref: "#components/parameters/ClientIPHeader"
-      security:
-        - OIDC: [openid, profile, products.update]
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                  example: "Aktualizovaný Produkt"
-                price:
-                  type: number
-                  format: float
-                  example: 25.99
-      responses:
-        "200":
-          description: Produkt byl úspěšně aktualizován
-        "404":
-          description: Produkt nenalezen
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: "Produkt s ID 1 nebyl nalezen."
-
-    delete:
-      summary: Smazat produkt podle ID
-      operationId: deleteProduct
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: ID produktu, který chcete smazat.
-          schema:
-            type: integer
-            example: 1
-        - $ref: "#components/parameters/TraceStateHeader"
-        - $ref: "#components/parameters/ClientIPHeader"
-      security:
-        - OIDC: [openid, profile, products.delete]
-      responses:
-        "204":
-          description: Produkt byl úspěšně smazán
-        "404":
-          description: Produkt nenalezen
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: "Produkt s ID 1 nebyl nalezen."
-
-  /categories:
-    get:
-      summary: Získat seznam kategorií
-      operationId: getCategories
-      security:
-        - OIDC: [openid, profile, categories.read]
-      parameters:
-        - $ref: "#components/parameters/TraceStateHeader"
-        - $ref: "#components/parameters/ClientIPHeader"
-      responses:
-        "200":
-          description: Úspěšná odpověď se seznamem kategorií
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                      example: 1
-                    name:
-                      type: string
-                      example: "Kategorie A"
-        "401":
-          description: Neautorizovaný přístup
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: "Neplatný token."
-
-    post:
-      summary: Přidat novou kategorii
-      operationId: addCategory
-      security:
-        - OIDC: [openid, profile, categories.create]
-      parameters:
-        - $ref: "#components/parameters/TraceStateHeader"
-        - $ref: "#components/parameters/ClientIPHeader"
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                  example: "Nová Kategorie"
-      responses:
-        "201":
-          description: Kategorie byla úspěšně přidána
         "400":
           description: Chybný požadavek
           content:
@@ -346,16 +145,6 @@ paths:
                     status:
                       type: string
                       example: "Zpracováno"
-        "401":
-          description: Neautorizovaný přístup
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: "Neplatný token."
 
     post:
       summary: Vytvořit novou objednávku
@@ -376,12 +165,12 @@ paths:
                   type: array
                   items:
                     type: integer
-                    example: 1
+                  example: [1, 2]
                 quantities:
                   type: array
                   items:
                     type: integer
-                    example: 2
+                  example: [2, 1]
       responses:
         "201":
           description: Objednávka byla úspěšně vytvořena
@@ -405,7 +194,6 @@ paths:
                   error:
                     type: string
                     example: "Jeden nebo více produktů nebyly nalezeny."
-
   /orders/{id}:
     get:
       summary: Získat detail objednávky podle ID
@@ -440,45 +228,3 @@ paths:
                   status:
                     type: string
                     example: "Zpracováno"
-        "404":
-          description: Objednávka nenalezena
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: "Objednávka s ID 1 nebyla nalezena."
-
-    delete:
-      summary: Smazat objednávku podle ID
-      operationId: deleteOrder
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: ID objednávky, kterou chcete smazat.
-          schema:
-            type: integer
-            example: 1
-        - $ref: "#components/parameters/TraceStateHeader"
-        - $ref: "#components/parameters/ClientIPHeader"
-      security:
-        - OIDC: [openid, profile, orders.delete]
-      responses:
-        "204":
-          description: Objednávka byla úspěšně smazána
-        "404":
-          description: Objednávka nenalezena
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: "Objednávka s ID 1 nebyla nalezena."
-
-security:
-  - OIDC: []
